# QualityAssessor

./: .gitignore  __init__.py  cochrane_rob_assessor.py  pyproject.toml  setup.py
quality_assessor/: __init__.py  cochrane_rob_assessor.py  grade_assessor.py  robins_i_assessor.py
quality_assessor.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_cochrane_rob_assessor.py  test_grade_asessor.py  test_grade_assessor.py  test_robins_i_assessor.py
tests/test_grade_assessor_files/: 66851-bc520a81a52f1a8a.js  74813-9013d4af86975633.js  78135-1de03fc25ae1f235.js  a.html  code.html  isolated-segment.html
tests/test_grade_assessor_files/a_data/: main.js
tests/test_grade_assessor_files/code_data/: frame.97df1c85.js  vendor.82d57e83.js
tests/test_grade_assessor_files/isolated-segment_data/: a.html
tests/test_grade_assessor_files/isolated-segment_data/a_data/: main.js
